Fixing spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1978,8 +1978,5 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   font-size: 20px;
   font-family: "livory", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  text-transform: none;
-  letter-spacing: normal;
-  line-height: 1.5;
 }
 
